Revision history for LWP-ConsoleLogger

{{$NEXT}}

0.000036  2017-07-21 22:02:23Z
    - Re-log the request headers when we get the response
    - Don't skip Cookie and Set-Cookie when dumping headers

0.000035  2017-03-01 14:38:00-05:00 America/Toronto
    - Adds LWP::ConsoleLogger::Everywhere (simbabque)

0.000034  2017-01-23 09:24:06-05:00 America/Toronto
    - Don't redact x-www-form-urlencoded data.

0.000033  2016-12-03 21:46:12-05:00 America/Toronto
    - Fix test that failed under some terminal widths (Varadinsky).
      https://github.com/oalders/lwp-consolelogger/pull/8

0.000032  2016-11-29 14:58:25-05:00 America/Toronto
    - Maybe guess at content type when parsing body.

0.000031  2016-11-25 13:08:50-05:00 America/Toronto
    - Display request body if available.

0.000030  2016-09-13 17:55:24-04:00 America/Toronto
    - Document header and parameter redaction
    - Suppress use of tables in some instances via "pretty"

0.000029  2016-09-13 10:37:57-04:00 America/Toronto
    - Stop setting default headers via debug_ua()

0.000028  2016-06-20 15:46:31-04:00 America/Toronto
    - Full release.  Contains no changes from previous trial release.

0.000027  2016-06-18 10:31:58-04:00 America/Toronto (TRIAL RELEASE)
    - Allow arbitrary headers and params to be redacted.
    - Fixes "Wide character in print" warnings.  Reported by Ricardo SIGNES 😄
      https://github.com/oalders/lwp-consolelogger/issues/6

0.000026  2016-06-09 16:22:18-04:00 America/Toronto
    - Fixes test that broke under scalar_quotes  => q{'}
    - Displays application/javascript content type (Andy Jack)

0.000025  2016-06-09 09:29:08-04:00 America/Toronto
    - Don't redact JSON with vendor-specific content types.

0.000024  2016-05-16 12:15:53-04:00 America/Toronto
    - Don't print gzipped and other non-text content to the screen.

0.000023  2016-04-15 15:22:01-04:00 America/Toronto
    - Avoid warning when Content-Type header is not set.
